// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> component renders correctly 1`] = `
Input {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      "test",
      "Test",
      "Test",
      true,
      false,
      Object {
        "value": "Test",
      },
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {
      "error": 2,
      "label": 1,
      "labelSrOnly": 4,
      "name": 0,
      "required": 3,
    },
    "root": <div>
      <div
        class="container svelte-1ulq3bj"
        data-required="true"
        data-sr-only="false"
      >
        <label
          class="svelte-1ulq3bj"
          for="test"
        >
          Test
        </label>
         
        <input
          class="svelte-1ulq3bj"
          id="test"
        />
         
        <span
          class="error svelte-1ulq3bj"
        >
          Test
        </span>
      </div>
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$$set": [Function],
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;

exports[`<Input /> component renders correctly 2`] = `
Input {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      "test",
      "Test",
      "Test",
      true,
      true,
      Object {
        "value": "Test",
      },
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {
      "error": 2,
      "label": 1,
      "labelSrOnly": 4,
      "name": 0,
      "required": 3,
    },
    "root": <div>
      <div
        class="container svelte-1ulq3bj"
        data-required="true"
        data-sr-only="true"
      >
        <label
          class="svelte-1ulq3bj"
          for="test"
        >
          Test
        </label>
         
        <input
          class="svelte-1ulq3bj"
          id="test"
        />
         
        <span
          class="error svelte-1ulq3bj"
        >
          Test
        </span>
      </div>
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$$set": [Function],
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;
